dnl Process this file with autoconf to produce a configure script.
AC_INIT()

dnl Checks for programs.
AC_PATH_PROG(PERL, perl, perl, $PATH:/usr/pkg/bin:/usr/local/bin)
AC_PATH_PROG(NSUPDATE, nsupdate, nsupdate, $PATH:/usr/pkg/bin:/usr/local/bin)
AC_PATH_PROG(IFCONFIG, ifconfig, ifconfig, /usr/local/v6/sbin:/sbin$PATH)

dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT(dynupdate.pl)
