dnl Process this file with autoconf to produce a configure script.
AC_INIT(resolv/base64.c)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S

AC_PREFIX_DEFAULT(/usr/local)

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h sys/time.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM
AC_TYPE_UID_T

dnl default defs
AC_DEFINE(DNS)
AC_DEFINE(USE_GETIPNODEBY)

dnl Checks for library functions.
AC_FUNC_MEMCMP
AC_CHECK_FUNCS(gethostname gettimeofday select socket strdup strerror)

AC_OUTPUT(Makefile)
