dnl Process this file with autoconf to produce a configure script.
AC_INIT(mnd.c)

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC
AC_PROG_CPP
AC_PROG_YACC
AC_PROG_LEX

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(strings.h sys/ioctl.h sys/time.h syslog.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

dnl Checks for library functions.
AC_FUNC_ALLOCA
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MEMCMP
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(gettimeofday select socket strdup strerror strtol)

AC_MSG_CHECKING(--enable-updateipsecdb)
updateipsecdb="no"
IPSEC_O=''
AC_ARG_ENABLE(updateipsecdb,
	[  --enable-updateipsecdb  enable IPsec database update by SHISA],
	[updateipsecdb="$enableval"])
AC_MSG_RESULT($updateipsecdb)
if test x"$updateipsecdb" = x"yes"; then
	AC_DEFINE(MIP_IPSEC, 1, [define to update IPsec DB by SHISA])
	IPSEC_O='ipsec.o'
fi   
AC_SUBST(IPSEC_O)

AC_OUTPUT(Makefile)
